# avt_qa_test_autotests

./: .env.example  .gitignore  BUGS.md  README.md  TESTCASES.md  config.py  conftest.py  index.html  pyproject.toml  pytest.ini
1/: index.html
_TASK_1/: _TASK_1.md
allure-result/: 0048c286-28ab-406f-99b4-6adb88bb9166-attachment.txt  00983bd9-baf7-4850-9d88-8add02673da3-attachment.txt  009a1d82-de2d-441f-99a7-562f170264e3-attachment.txt  01963f83-4812-4ccb-8d3e-32c098bcb244-attachment.txt  01eeb230-9a18-4413-9407-0010eb60cc66-attachment.txt  01fc56a6-0601-4e07-b42a-1362ce063a21-attachment.json  021afdda-4e58-4526-aee4-ef4804531c6a-container.json  0265751f-c2b5-4336-8a15-cb6340e1f7df-attachment.json  027b9cd4-f5e2-4512-be50-9eee444bb8a5-container.json  02a2a6b0-f35a-4a01-9cdc-29fc92d30dfe-attachment.txt  02b6aa21-2b5b-4ec4-aba5-19814bd6e82c-container.json  0356790a-b224-4f74-887e-2c8bacda9695-attachment.txt  041d70b7-3d5a-43a9-9089-37e950cea192-container.json  041e2cde-2aa4-47c3-b164-b1b0fde598f8-result.json  04597100-ca94-4198-ba77-5e5f6e9a8f35-container.json  045dac02-1aac-46ed-ac04-45436d17c763-attachment.txt  04f2fe1a-1290-4c90-9e51-c51fdf6645b0-attachment.txt  0524d88d-2ab8-4166-843a-b6fd6a90d3dc-attachment.txt  052b69aa-c6b6-4660-a3fe-ccf1ac221553-attachment.txt  05382cb6-0b54-4789-844f-a7121c5f0afc-attachment.txt  054af59f-499b-4cc2-976b-14fdcceca9e6-attachment.json  0570a40e-d919-4411-ad6e-f2df64949513-attachment.txt  0582d4b8-9d16-479e-a208-a11157cdfd92-result.json  05ddfbd3-5d2e-43d5-9316-1cfe24c49e76-attachment.txt  (+843 more)
clients/: api_client.py  errors_schema.py  (+2 more)
(+592 files in other folders)
